Make resource body logic more obvious in BI view
For single/default resource method case, we will not extract resource method logic to a new function. This will eliminate unnecessary intermediate `invokeEnpoint0()` function calls.